--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.0",
-    "mongoose": "^5.5.11"
+    "mongoose": "^5.5.11",
+    "morgan": "^1.9.1"
   }
 }
