--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "jwt-simple": "^0.5.6",
     "mongoose": "^5.5.11",
     "morgan": "^1.9.1",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "passport": "^0.4.0"
   }
 }
